--- a/Udemy-PythonProgramming/Udemy - Python Programming (Basics,OOP,Modules,PyQt).ipynb
+++ b/Udemy-PythonProgramming/Udemy - Python Programming (Basics,OOP,Modules,PyQt).ipynb
@@ -916,10 +916,328 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Python Build in Modules\n",
+    "- __What is Module?__\n",
+    "    - a module is a fule consisting of Python code. Grouping related code into a module makes the code easier to understand and use.\n",
+    "    A module can define function, classes and variable. A module can also include runnable code.\n",
+    "- __Locating Modules__\n",
+    "    - When you import a module, the Python interpreter searches for the module in the following sequences:\n",
+    "        - The current directory\n",
+    "        If the module isn't found, Pyhton the searches each directory in the shell variable PYTHONPATH.\n",
+    "        - If all else fails, Python checks the default path. On UNIX, this default path is normally /usr/local/lib/python/.\n",
+    "- __Importing Modules__\n",
+    "    - 3 Ways to import modules in python\n",
+    "        - Import + __Module name__\n",
+    "        - From __module name__ import ...\n",
+    "        - From __module name__ import *"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "- __OS Module__\n",
+    "    - A Python Module (need to be imported)\n",
+    "    - This module contain all the methods to deal with filenames, paths and directories\n",
+    "    - All functions in this module raise OSError in the case of invalid or inaccessible file names and paths. \n",
+    "- __Print to screen__\n",
+    "    - The suplest way to produce output is using the print statement where you can pass zero or more expression sseparated by commas. This fuction converts the expression you pass into a strung and writes the result to standard output.\n",
+    "    ``` print(\"assalamualaikum\")```\n",
+    "- __Reading Keyboard Input:__\n",
+    "    - You can use input methode to get input from user.\n",
+    "    ```input('Enter your name: ') ```"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "- __The open Function:__\n",
+    "    - Before you can read or write a file, you have to open it using Python's built-in open() function. This function creates a file object, which would be utilized to call other support methods associated with it.\n",
+    "- __Access Mode__\n",
+    "    - R : Open a file for reading only\n",
+    "    - R+ : Open a file for both reading and writing\n",
+    "    - W : Open a file for writing only\n",
+    "    - W+ : Open a file for both reading and writing\n",
+    "- __The file object attributes:__\n",
+    "    - Once a file is opened and you have one file object, you can get various information related to that file.\n",
+    "    - Here is a list of all attributes related to file object:\n",
+    "        - File.closed: Return true if file is closed, false otherwise.\n",
+    "        - File.mode: Returns access mode with which file was opened.\n",
+    "        - File.name: Return name of the file.\n",
+    "- Example <br />"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 44,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Name OF The File:  1.txt\n",
+      "Closed or Not:  False\n",
+      "Opening mode:  wb\n"
+     ]
+    }
+   ],
+   "source": [
+    "import os\n",
+    "file = open('1.txt','wb')\n",
+    "print(\"Name OF The File: \", file.name) \n",
+    "print('Closed or Not: ', file.closed) \n",
+    "print('Opening mode: ', file.mode) "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "- __The read() methos__\n",
+    "    - The read() method reads a string fron an open file. It is important to note that Python strings can have binary data and not just text."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 45,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "assalamualaikum\n"
+     ]
+    }
+   ],
+   "source": [
+    "file = open('2.txt','r+')\n",
+    "words = file.read(15)\n",
+    "print(words)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "- __File Positions__\n",
+    "    - The tell() method tells you the corrent position within the file; in other words, the next read or write will occur at that many bytes from the beginning of the file.\n",
+    "    "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 48,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "assalamualaikum\n",
+      "15\n"
+     ]
+    }
+   ],
+   "source": [
+    "file = open('2.txt','r+')\n",
+    "words = file.read(15)\n",
+    "print(words)\n",
+    "\n",
+    "position = file.tell()\n",
+    "print(position)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "- __The write() Method__\n",
+    "    - The write() method writes any string to an open file. It is important to note that Python strings can have ninary data and not just text."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 49,
    "metadata": {},
    "outputs": [],
+   "source": [
+    "file = open('3.txt','w') #great new if file not exist\n",
+    "file.write(\"Python is amazing programming language.\")\n",
+    "file.close()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "- __Append Text Into File__\n",
+    "    - Add new text in the end of your file"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 51,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "file = open('3.txt','a')\n",
+    "file.write(\"Python is amazing programming language. isn't it?\")\n",
+    "file.close()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "- __The rename() method:__\n",
+    "    - The rename() method takes two arguments, the current filename and the new file name\n",
+    "    "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 53,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "os.rename(\"1.txt\",\"test.txt\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "- __The remove() method__\n",
+    "    - You can use the remove() method to delete files by supplying the name of the file tobe deleted as the argument."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 55,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "os.remove('test.txt')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "- __The mkdir() method__\n",
+    "    - You can use the mkdir() method of the os module to create directories in the current directory. You need to supply an argument to this method which contains the name of the directory to be created."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 56,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "os.mkdir(\"tesDir\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "- __The chdir() Method__\n",
+    "    - You can use the chdir() method to change the current directory. The chdir() method takes an argument, which is the name of the directory that you want to make the current directory."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 60,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#os.chdir('tesDir')\n",
+    "os.chdir('/home/amin/Documents/Code/PythonProgrammingCourse')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "- __The getcwd() method__\n",
+    "    - The getcwd() method displays the current working directory.\n",
+    "    "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 61,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'/home/amin/Documents/Code/PythonProgrammingCourse'"
+      ]
+     },
+     "execution_count": 61,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "os.getcwd()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "- __The rmdir() method__\n",
+    "    - The rmdir() method deletes the directory, which is passed as an argument in the method.\n",
+    "    - Befor removing a directory, all the contents in it should be removed."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 64,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "os.rmdir('Udemy-PythonProgramming/tesDir')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "- __Date & Time In Python__\n",
+    "    - Getting current time "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 66,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "local current time: Sun May  1 12:41:40 2022\n"
+     ]
+    }
+   ],
+   "source": [
+    "import time\n",
+    "lt = time.asctime(time.localtime(time.time()))\n",
+    "print(\"local current time:\",lt)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
    "source": []
   }
  ],
