--- a/Udemy-PythonProgramming/Udemy - Python Programming (Basics,OOP,Modules,PyQt).ipynb
+++ b/Udemy-PythonProgramming/Udemy - Python Programming (Basics,OOP,Modules,PyQt).ipynb
@@ -1236,9 +1236,813 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 67,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Welcome :D\n",
+      "after 3 seconds\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Sleep method\n",
+    "import time\n",
+    "print('Welcome :D')\n",
+    "time.sleep(3)\n",
+    "print('after 3 seconds')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 68,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Here is the calendar:     January 2008\n",
+      "Mo Tu We Th Fr Sa Su\n",
+      "    1  2  3  4  5  6\n",
+      " 7  8  9 10 11 12 13\n",
+      "14 15 16 17 18 19 20\n",
+      "21 22 23 24 25 26 27\n",
+      "28 29 30 31\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Calendar\n",
+    "import calendar\n",
+    "\n",
+    "cal = calendar.month(2008,1)\n",
+    "print('Here is the calendar:',cal)"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
+   "source": [
+    "#### Python Object Oriented Programming\n",
+    "- __Object Oriented Programming__\n",
+    "    - Developed 1960 (small talk)\n",
+    "    - A paradigm for code organizing and design\n",
+    "- __Why OOP:__\n",
+    "    - OOP organize code so it is:\n",
+    "        - Easier to use\n",
+    "        Easier to understand\n",
+    "        Easier to maintain and extend\n",
+    "    - Learning OOP is a necessary next step into the larger world of software engineering\n",
+    "- __Object Oriented Three Pillars:__\n",
+    "    - Encapsulation\n",
+    "    - Inheritance\n",
+    "    - Polymorphism\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "- __Everything is object__\n",
+    "    - Every thing in python is an object of a particular type\n",
+    "    - Is a unit of date (have one or more attibutes) of particular class or type with associated functionality (methods)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 69,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'list'>\n",
+      "<class 'bool'>\n",
+      "<class 'NoneType'>\n",
+      "<class 'type'>\n",
+      "<class 'function'>\n"
+     ]
+    }
+   ],
+   "source": [
+    "mylist = ['a','b','c']\n",
+    "mybool = True\n",
+    "mynone = None\n",
+    "this_type = type(mylist)\n",
+    "\n",
+    "def myfunc():\n",
+    "    print('hello')\n",
+    "\n",
+    "print(type(mylist))\n",
+    "print(type(mybool))\n",
+    "print(type(mynone))\n",
+    "print(type(this_type))\n",
+    "print(type(myfunc))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "- __What is Class?__\n",
+    "    - A class is a blueprint or template or set of instructions to build a specific type og object.\n",
+    "    - Every object is built from a class.\n",
+    "    - Each class should be designed and programmed to accomplish one, and only one, thing."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "- __What is Methods:__\n",
+    "    - Is a python function that do some thing\n",
+    "    - A callable attribute defined in the class\n",
+    "    - Every method is attribute but not every attribute is a method."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 72,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Attributes:\n",
+    "class student():\n",
+    "    def __init__(self,name,age):\n",
+    "        self.name = name\n",
+    "        self.age = age\n",
+    "        self.balance = 0\n",
+    "        self.credit = 50"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 73,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0\n",
+      "50\n"
+     ]
+    }
+   ],
+   "source": [
+    "s = student('amin',27)\n",
+    "print(s.balance)\n",
+    "print(s.credit)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "- __Self:__\n",
+    "    - Is a placeholder for the object"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 77,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "welcome\n"
+     ]
+    }
+   ],
+   "source": [
+    "\n",
+    "class myclass:\n",
+    "    def test(self):\n",
+    "        print('welcome')\n",
+    "        print(self)\n",
+    "\n",
+    "this = myclass() #object\n",
+    "this.test()\n",
+    "print(this)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "- __Constructor:__\n",
+    "    - A special type of method\n",
+    "    - It is automatically called when the instance is contructed\n",
+    "    "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 78,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class student:\n",
+    "    def details(self, name, age):\n",
+    "        self.name = name\n",
+    "        self.age = age\n",
+    "        print(\"the name is {} and the age is {}\".format(name,age))\n",
+    "\n",
+    "    def __init__(self):\n",
+    "        print('you are welcome')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 80,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "you are welcome\n",
+      "the name is amin and the age is 27\n"
+     ]
+    }
+   ],
+   "source": [
+    "s = student()\n",
+    "s.details('amin',27)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 82,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "you are welcome\n"
+     ]
+    },
+    {
+     "ename": "TypeError",
+     "evalue": "details() missing 2 required positional arguments: 'name' and 'age'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[0;32m/tmp/ipykernel_14436/3485897138.py\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[0ms\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mstudent\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 2\u001b[0;31m \u001b[0ms\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mdetails\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[0;31mTypeError\u001b[0m: details() missing 2 required positional arguments: 'name' and 'age'"
+     ]
+    }
+   ],
+   "source": [
+    "s = student()\n",
+    "s.details()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "- __Class Attribute Vs Instance Attribute:__\n",
+    "    - Attributes / variables in the class are accessible through the instance\n",
+    "    - Instance attributes are also acccessible by the instance\n",
+    "    - When use the syntax object. attribute we are asking to look up the attribute;\n",
+    "        - First in the instance\n",
+    "        - Then in the class\n",
+    "    - A method on an instance passes instance as the first argument to the method(self)\n",
+    "    - Instance have their own data called instance attributes\n",
+    "    - Variables defined in the class are defined are class attributes\n",
+    "    - When we read an attribute python looks for it first in the instance and then the class then in a aclass inherits from this class."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 83,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "class_value\n",
+      "aminulloh\n",
+      "class_value\n"
+     ]
+    }
+   ],
+   "source": [
+    "class myclass(object):\n",
+    "    class_value = 'class_value'\n",
+    "d = myclass()\n",
+    "print(d.class_value)\n",
+    "\n",
+    "d.class_value = 'aminulloh'\n",
+    "print(d.class_value)\n",
+    "\n",
+    "del d.class_value\n",
+    "print(d.class_value)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "__OPP Example 1__"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 90,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    " class student:\n",
+    "    def __init__(self,name):\n",
+    "        self.name = name\n",
+    "        self.marks = []\n",
+    "        print('welcome {} to the school'.format(name)) \n",
+    "    \n",
+    "    def addmarks(self, mark):\n",
+    "        self.marks.append(mark)\n",
+    "    \n",
+    "    def avg(self):\n",
+    "        return sum(self.marks)/len(self.marks)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 95,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "welcome amin to the school\n",
+      "amin\n",
+      "[]\n",
+      "[80, 56, 99, 88]\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "80.75"
+      ]
+     },
+     "execution_count": 95,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "d = student('amin')\n",
+    "print(d.name)\n",
+    "print(d.marks)\n",
+    "\n",
+    "d.addmarks(80)\n",
+    "d.addmarks(56)\n",
+    "d.addmarks(99)\n",
+    "d.addmarks(88)\n",
+    "print(d.marks)\n",
+    "d.avg()\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "__OOP Example 2__"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 115,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "30\n",
+      "200\n"
+     ]
+    }
+   ],
+   "source": [
+    "class calculator:\n",
+    "    def __init__(self,a,b):\n",
+    "        self.a = a\n",
+    "        self.b = b\n",
+    "\n",
+    "    def add(self):\n",
+    "        return self.a + self.b\n",
+    "    \n",
+    "    def mull(self):\n",
+    "        return self.a * self.b\n",
+    "\n",
+    "calc = calculator(10,20)\n",
+    "print(calc.add())\n",
+    "print(calc.mull())"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "##### Inheritance Concept:\n",
+    "- A class can inherite from another class its attributes and methods\n",
+    "- The class can access attributes og the inherited parent class"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 101,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Example 1\n",
+    "class animal(object):\n",
+    "    def __init__(self,name):\n",
+    "        self.name = name\n",
+    "    \n",
+    "    def eat(self, food):\n",
+    "        print('{} is eating {}'.format(self.name,food))\n",
+    "    \n",
+    "class dog(animal):\n",
+    "    def fetch(self, thing):\n",
+    "        print(\"{} get the {}\".format(self.name,thing))\n",
+    "\n",
+    "class cat(animal):\n",
+    "    def cat_eat(self):\n",
+    "        print('{} is eating food'.format(self.name))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 102,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "dd is eating honey\n"
+     ]
+    }
+   ],
+   "source": [
+    "d = dog('dd')\n",
+    "d.eat('honey')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 108,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "tikus\n",
+      "tikus is eating food\n"
+     ]
+    }
+   ],
+   "source": [
+    "c = cat('tikus')\n",
+    "print(c.name)\n",
+    "c.cat_eat()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "##### Example 2\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 109,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class calculator:\n",
+    "    def __init__(self,x,y):\n",
+    "        self.x = x\n",
+    "        self.y = y\n",
+    "    \n",
+    "    def sum(self):\n",
+    "        return self.x + self.y\n",
+    "    \n",
+    "    def product(self):\n",
+    "        return self.x * self.y\n",
+    "    \n",
+    "class scientific(calculator):\n",
+    "    def power(self):\n",
+    "        return pow(self.x,self.y)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 111,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "25\n",
+      "7\n",
+      "10\n"
+     ]
+    }
+   ],
+   "source": [
+    "c = scientific(5,2)\n",
+    "print(c.power())\n",
+    "print(c.sum())\n",
+    "print(c.product())"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "##### Example 3"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 112,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class Date(object):\n",
+    "    def get_date(self):\n",
+    "        return '2019-03-24'\n",
+    "\n",
+    "class Time(Date):\n",
+    "    def get_time(self):\n",
+    "        return '05:13:07'"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 113,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2019-03-24\n",
+      "05:13:07\n",
+      "2019-03-24\n"
+     ]
+    }
+   ],
+   "source": [
+    "d = Date()\n",
+    "print(d.get_date())\n",
+    "\n",
+    "t = Time()\n",
+    "print(t.get_time())\n",
+    "print(t.get_date())"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "- __Some Onheritance Terms:__\n",
+    "    - An Inheriting class:\n",
+    "        - Child class\n",
+    "        - Derived class\n",
+    "        - Subclass\n",
+    "    - An Inheritated class:\n",
+    "        - Parent class\n",
+    "        - Base class\n",
+    "        - Super class"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "##### Poly morphism\n",
+    "- __What is a polymorphism?__\n",
+    "    - The third pillar of OOP\n",
+    "    - Two classes with same interface (ex: method name)\n",
+    "    - The methods are often different, but conceptially similar"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 118,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class Animal(object):\n",
+    "    def __init__(self,name):\n",
+    "        self.name = name\n",
+    "\n",
+    "    def eat(self, food):\n",
+    "        print('{0} eatc {1}'.format(self.name, food))\n",
+    "\n",
+    "class Dog(Animal):\n",
+    "    def fetch(self, thing):\n",
+    "        print('{0} goes after the {1}'.format(self.name,thing))\n",
+    "    \n",
+    "    def show_affection(self):\n",
+    "        print('{0} wags tail'.format(self.name))\n",
+    "\n",
+    "class Cat(Animal):\n",
+    "    def swatstring(self):\n",
+    "        print('{0} shreds the string'.format(self.name))\n",
+    "    \n",
+    "    def show_affection(self):\n",
+    "        print('{0} purrs'.format(self.name))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 119,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "misho wags tail\n",
+      "shosho purrs\n",
+      "nemo purrs\n",
+      "scot wags tail\n"
+     ]
+    }
+   ],
+   "source": [
+    "for a in (Dog('misho'),Cat('shosho'),Cat('nemo'),Dog('scot')):\n",
+    "    a.show_affection()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "##### Constructor Inheritance (Super)\n",
+    "- __Super:__\n",
+    "    - Used to relate the class with it's parent class\n",
+    "    - If the class does not have an __init__ constructor pythin will check its parent class\n",
+    "    - We use super() function to call methods in the parent class"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 120,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class Animal(object):\n",
+    "    def __init__(self,name):\n",
+    "        self.name = name\n",
+    "    \n",
+    "    def eat(self, food):\n",
+    "        print('%s is eating %s' % (self.name, food))\n",
+    "    \n",
+    "class Dog(Animal):\n",
+    "    def fetch(self,thing):\n",
+    "        print('%s goes after the %s' %(self.name, thing))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 121,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "mishoe\n"
+     ]
+    }
+   ],
+   "source": [
+    "d = Dog('mishoe')\n",
+    "print(d.name) "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 122,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class Animal(object):\n",
+    "    def __init__(self,name):\n",
+    "        self.name = name\n",
+    "    \n",
+    "    def eat(self, food):\n",
+    "        print('%s is eating %s' % (self.name, food))\n",
+    "    \n",
+    "class Dog(Animal):\n",
+    "    def __init__(self,name):\n",
+    "        super(Dog,self).__init__(name)\n",
+    "        self.food = 'fish'\n",
+    "\n",
+    "    def fetch(self,thing):\n",
+    "        print('%s goes after the %s' %(self.name, thing))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "d = Dog('misho')\n",
+    "print(d.name)\n",
+    "print(d.food)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "##### Multiple Inheritance\n",
+    "- __Multiple inheritance:__\n",
+    "    - If there in a multiple inheritance python will work with depth-first by default\n",
+    "    - Mro (method resolution order): D-B-A-C\n",
+    "<br /><img src='./img/MultipleInheritance.png'>\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 123,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class A(object):\n",
+    "    def dothis(self):\n",
+    "        print('Doing this in A')\n",
+    "    \n",
+    "class B(A):\n",
+    "    pass\n",
+    "\n",
+    "class C(object):\n",
+    "    def dothis(self):\n",
+    "        print('Doing this in C')\n",
+    "\n",
+    "class D(B,C):\n",
+    "    pass"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 124,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Doing this in A\n",
+      "[<class '__main__.D'>, <class '__main__.B'>, <class '__main__.A'>, <class '__main__.C'>, <class 'object'>]\n"
+     ]
+    }
+   ],
+   "source": [
+    "d = D()\n",
+    "d.dothis()\n",
+    "print(D.mro())"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Python Projects"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "##### Project 1 Gussing Game"
+   ]
   }
  ],
  "metadata": {
